# cmake_study

01-basic/A-hello-cmake/: CMakeLists.txt
01-basic/B-hello-headers/: CMakeLists.txt
01-basic/C-static-library/: CMakeLists.txt
01-basic/D-shared-library/: CMakeLists.txt
01-basic/D-shared-library/include/shared/: Hello.h
01-basic/E-installing/: CMakeLists.txt
01-basic/E-installing/src/: Hello.cpp
01-basic/F-build-type/: CMakeLists.txt
01-basic/G-complie-flags/: CMakeLists.txt
01-basic/H-third-party-library/: CMakeLists.txt
02-sub-projects/A-basic/: CMakeLists.txt
